[package]
name = "tw-voucher-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[features]
serialize = []
