[package]
name = "tw-voucher-rs"
version = "0.1.0"
edition = "2024"
description = "Async TrueWallet Voucher Library for Rust!"
repository = "https://github.com/Lebenoa/tw-voucher-rs"
license = "MIT or Apache-2.0"

[dependencies]
reqwest = { version = "0.13", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[features]
serialize = []
